name: unrpa
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: ppbogdan@gmail.com
homepage: https://github.com/pbogdan/unrpa
synopsis: Extractor for RPA archives used by RenPy visual novel engine.
author: Piotr Bogdan

library
    exposed-modules:
        RPA
    build-depends:
        base >=4.10 && <4.11,
        protolude -any,
        pipes -any,
        pipes-bytestring -any,
        zlib -any,
        bytestring -any,
        directory -any,
        containers -any,
        transformers -any,
        python-pickle -any,
        filepath -any
    default-language: Haskell2010
    hs-source-dirs: src

